[package]
name = "rtm-tests"
version = "0.0.2"
rust-version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/rtm-tests"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/rtm-tests"
description = """
Rust Type Mapper (RTM) crate rtm-tests.
"""
categories = [
    "database",
    "asynchronous",
]
keywords = ["async", "orm", "cqrs", "http", "sql"]
autoexamples = false

[lib]
name = "rtm_tests"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"], optional = true }
# embassy = { version = "0.1.0", path = "./embassy/embassy", features = ["defmt", "nightly"], optional = true  }
# rtm = { package = "rtm-rs", version = "0" }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"], optional = true }

[dev-dependencies]
aquamarine = "0.1.11"
criterion = { version = "0.3", features = ["html_reports"] }
futures = "0.3"
futures-timer = "3"
inventory = "0.2.2"
macrotest = "1"
mockall = "0.11"
rtm = { package = "rtm-rs", version = "0", path = "./../../rtm" }
rtm-devtools = { path = "./../rtm-devtools" }
trybuild = "1"

[features]
# Nothing by default
default = []
ci = []
as = ["async-std"]
# ea = ["embassy"]
tk = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "defaults"
path = "src/integration/main.rs"
harness = false
